# drf-todo

./: pyproject.toml
config/: settings.py  tasks.py  urls.py
todos/: models.py  permissions.py  serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py
